wubi (8.10) UNRELEASED; urgency=low

  * Initial revision
  * Hello world, we have a window showing
  * Fixed loop on quit
  * Fixed tools
  * Added logging support
  * Reorganized commandline arguments
  * Improved progress object
  * Added data dir
  * Added win32 wizard base page class
  * Added mappings
  * Initial win32 page layout
  * Using basic window as panel

 -- Agostino Russo <agostino.russo@gmail.com>  Mon, 11 Aug 2008 21:50:39 +0100